--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=
 GROQ_MODEL_ID=openai/gpt-oss-120b
 FLASK_APP=app.py
 FLASK_DEBUG=1
