--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,5 @@
 # .streamlit/secrets.toml
-GROQ_API_KEY =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
+GROQ_API_KEY =
 
 [connections.edufinance_db]
 url = "sqlite:///instance/edufinance.db"
